# zhiku_rag_project

./: .env  .gitattributes  README.md  pyproject.toml  掌柜智库说明文档.docx
app/clients/: mongo_history_utils.py
app/import_process/agent/: main_graph.py
app/import_process/agent/nodes/: node_bge_embedding.py  node_document_split.py  node_entry.py  node_import_milvus.py  node_item_name_recognition.py  node_md_img.py  node_pdf_to_md.py
app/import_process/api/: import_server.py
app/import_process/page/: import.html
app/query_process/agent/nodes/: node_answer_output.py  node_item_name_confirm.py  node_rerank.py  node_rrf.py  node_search_embedding.py  node_search_embedding_hyde.py  node_web_search_mcp.py
app/query_process/api/: query_server.py
output/: chunks.json
output/2026-06-18/35039e42-1e76-4c82-8e77-030af941ffb3/: chunks.json
output/2026-06-18/35039e42-1e76-4c82-8e77-030af941ffb3/H3C LA2608室内无线网关 用户手册-6W100-整本手册/: H3C LA2608室内无线网关 用户手册-6W100-整本手册_new.md
output/2026-06-18/46451341-4fa5-4441-918e-da15615082e1/: chunks.json
output/2026-06-18/46451341-4fa5-4441-918e-da15615082e1/华为显示器 B3-211H 用户指南-(NSN-21BZ,02,zh-cn)/: 华为显示器 B3-211H 用户指南-(NSN-21BZ,02,zh-cn)_new.md
output/2026-06-18/e19b7b99-61e2-4a5e-b5f1-e8a8f69f4ad0/: chunks.json
output/2026-06-18/e19b7b99-61e2-4a5e-b5f1-e8a8f69f4ad0/华为擎云B730 用户指南-(PUCZ,Windows11_03,zh-cn)/: 华为擎云B730 用户指南-(PUCZ,Windows11_03,zh-cn)_new.md
output/2026-06-19/c73111a7-fdfd-4bb0-957d-491daf971401/: chunks.json
output/hak180产品安全手册/: hak180产品安全手册_new.md
(+1 files in other folders)
